--- a/Brackey's Game Jam 2022/Packages/manifest.json
+++ b/Brackey's Game Jam 2022/Packages/manifest.json
@@ -1,10 +1,9 @@
 {
   "dependencies": {
-    "com.unity.cinemachine": "2.6.15",
     "com.unity.collab-proxy": "1.5.7",
     "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.16",
-    "com.unity.render-pipelines.universal": "10.5.1",
+    "com.unity.ide.visualstudio": "2.0.9",
+    "com.unity.ide.vscode": "1.2.3",
     "com.unity.test-framework": "1.1.26",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
